допиливаю первую страницу

--- a/index.html
+++ b/index.html
@@ -30,7 +30,38 @@
     </header>
     <main class="container">
       <h1 class="visually-hidden">Дизайн студия Нёрдс</h1>
+    
+      <section class="slider">
+      <div class="slider-container">
+        <h2 class="visually-hidden">Преимущества</h2>
+          <input class="visually-hidden" type="radio" id="product-1" name="toggle" checked>
+          <input class="visually-hidden" type="radio" id="product-2" name="toggle">
+          <input class="visually-hidden" type="radio" id="product-3" name="toggle">
+        <div class="slider-controls">
+          <label class="slider-controls-item slider-controls-item--1" for="product-1">Первый</label>
+          <label class="slider-controls-item slider-controls-item--2" for="product-2">Второй</label>
+          <label class="slider-controls-item slider-controls-item--3" for="product-3">Третий</label>
+        </div>
+        <ul class="slider-list">
+          <li class="slider-item">
+            <h3>Долго, дорого,<br> скрупулезно.</h3>
+            <p>Математически выверенный дизайн<br> для вашего сайта или мобильного приложения.</p>
+            <a class="slider-item-button button" href="#">Узнать больше</a>
+          </li>
+          <li class="slider-item">
+            <h3>Любим математику как никто другой</h3>
+            <p>Никакого креатива, только математические формулы для расчета идеальных пропорций.</p>
+            <a class="slider-item-button button" href="#">Узнать больше</a>
+          </li>
+          <li class="slider-item">
+            <h3>Только ночь,<br> только хардкор</h3>
+            <p>Работать днем, как все? Мы против этого.<br> Ближе к полуночи работа только начинается.</p>
+            <a class="slider-item-button button" href="#">Узнать больше</a>
+          </li>
+        </ul>
+      </div>
 
+    </section>
       <section class="features">
         <h2 class="visually-hidden">Наши продукты</h2>
         <ul class="features-list">
@@ -59,7 +90,54 @@
             <a class="button button-3" href="to order.html">ЗАКАЗАТЬ</a>
           </li>
         </ul>
+        <hr align="center" width="1160" size="2" color="#e1e1e1"/>
       </section>
+
+        <section class="about-us">
+        <div class="about-us-desc">
+          <div class="description-text">
+            <p class="about-us-description">Мы - маленькая, но гордая дизайн-студия из Краснодара.</p>
+            <p class="about-us-principles">Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая рук, как роботы.</p>
+            <h3>ВЫПОЛНЯЕМ ЗАКАЗЫ НА РАЗРАБОТКУ:</h3>
+            <ul class="about-us-description-list">
+              <li>Веб-сайтов любой сложности</li>
+              <li>Мобильных приложений для iOS и Android</li>
+              <li>Слайдшоу и видео для корпоративных презентаций</li>
+            </ul>
+            <hr align="center" width="1160" size="2" color="#e1e1e1"/>
+          </div>
+
+          <div class="description-logo-table">
+            <img src="img/nerds-illustration.png" alt="" width="360" height="208">
+            <p class="table-title">С 2004 ГОДА ЛЮБИМ ТОЧНОСТЬ ВО ВСЕМ:</p>
+            <table class="description-table">
+              <tr class="percent">
+                <td>146<sup>%</sup></td>
+                <td>100<sup>%</sup></td>
+                <td>50<sup>%</sup></td>
+              </tr>
+              <tr class="quality-level">
+                <td>Уровень самоотдачи</td>
+                <td>Соблюдение сроков</td>
+                <td>Минимальная предоплата</td>
+              </tr>
+            </table>
+          </div>
+        </div>
+
+        <ul class="clients">
+         <li><a href="https://htmlacademy.ru/intensive/htmlcss" aria-label="переход на сайт htmlacademy"><img src="img/htmlacademy-logo.png" alt="логотип сайта htmlacademy" width="199" height="68"></a></li>
+         <li><div class="vertical-line"></div></li>
+         <li><a href="#" aria-label="переход на сайт бородински"><img src="img/borodinski-logo.png" alt="логотип сайта бородински" width="209" height="90"></a></li>
+         <li><div class="vertical-line"></div></li>
+         <li><a href="#" aria-label="переход на сайт pink"><img src="img/pink-logo.png" alt="логотип сайта pink" width="185" height="52"></a></li>
+         <li><div class="vertical-line"></div></li>
+         <li><a href="#" aria-label="переход на сайт mishka"><img src="img/mishka-logo.png" alt="логотип сайта mishka" width="173" height="84"></a></li>
+       </ul>
+       <hr align="center" width="1160" size="2" color="#e1e1e1"/>
+     </section>
+
+
       <section class="contacts">
       <div class="contacts-title">
         <h2>Напишите нам</h2>
@@ -82,7 +160,16 @@
           </p>
           <button class="button" type="submit">ОТПРАВИТЬ</button>
         </form>
+      </section>
 
+      <section class="location">
+        <img src="img/map.jpg" alt="Местоположение студии на карте">
+        <div class="address">
+          <h3> NЁRDS DESIGN STUDIO</h3>
+          <p class="address-info">191186, Санкт-Петербург,<br>ул. Б. Конюшенная, д. 19/8</p>
+          <p class="tel"> +7 (812) 275-75-75</p>
+          <a class="button" href="#">НАПИШИТЕ НАМ</a>
+        </div>
       </section>
     </main>
     <footer class="main-footer container">
