--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
       </nav>
     </div>
     </header>
-    <main class="container">
+    <main class="main">
       <h1 class="visually-hidden">Дизайн студия Нёрдс</h1>
-    
+
       <section class="slider">
       <div class="slider-container">
         <h2 class="visually-hidden">Преимущества</h2>
@@ -63,6 +63,7 @@
 
     </section>
       <section class="features">
+        <div class="container">
         <h2 class="visually-hidden">Наши продукты</h2>
         <ul class="features-list">
           <li class="features-item">
@@ -91,9 +92,11 @@
           </li>
         </ul>
         <hr align="center" width="1160" size="2" color="#e1e1e1"/>
+      </div>
       </section>
 
         <section class="about-us">
+          <div class="container">
         <div class="about-us-desc">
           <div class="description-text">
             <p class="about-us-description">Мы - маленькая, но гордая дизайн-студия из Краснодара.</p>
@@ -135,6 +138,7 @@
          <li><a href="#" aria-label="переход на сайт mishka"><img src="img/mishka-logo.png" alt="логотип сайта mishka" width="173" height="84"></a></li>
        </ul>
        <hr align="center" width="1160" size="2" color="#e1e1e1"/>
+       </div>
      </section>
 
 
@@ -163,12 +167,15 @@
       </section>
 
       <section class="location">
-        <img src="img/map.jpg" alt="Местоположение студии на карте">
+        <img src="img/map.jpg" alt="Карта СПб">
         <div class="address">
           <h3> NЁRDS DESIGN STUDIO</h3>
           <p class="address-info">191186, Санкт-Петербург,<br>ул. Б. Конюшенная, д. 19/8</p>
           <p class="tel"> +7 (812) 275-75-75</p>
           <a class="button" href="#">НАПИШИТЕ НАМ</a>
+        </div>
+        <div class="map-marker">
+          <img src="img/map-marker.png" alt="Месторасположение на карте">
         </div>
       </section>
     </main>
