--- a/catalog.html
+++ b/catalog.html
@@ -82,20 +82,28 @@
         </button>
       </form>
       </section>
+
       <section class="catalog">
           <h2 class="visually-hidden">Список готовых шаблонов</h2>
         <ul class="catalog-list">
           <li class="catalog-item">
+            <svg class="catalog-item-browser" xmlns="http://www.w3.org/2000/svg" width="360" height="40" viewBox="0 0 360 40">
+              <path fill="#4D4D4D" d="M356 0H4C1.8 0 0 1.8 0 4v36h360V4c0-2.2-1.8-4-4-4zM22.991 27a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm23.011 0a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm23.011 0a7 7 0 1 1 0-14 7 7 0 0 1 0 14z"/></svg>
               <a href="catalog-item.html">
                 <img src="img/sedona.png" width="360" height="576" alt="сайт SENODA">
               </a>
+              <div class="add-info">
                 <div class="catalog-list-window">
                   <h4>SEDONA</h4>
                     <p>Информационный сайт <br>для туристов</p>
                       <a class="button catalog-list-button" href="#">9 900 РУБ.</a>
                 </div>
+              </div>
           </li>
+
           <li class="catalog-item">
+            <svg class="catalog-item-browser" xmlns="http://www.w3.org/2000/svg" width="360" height="40" viewBox="0 0 360 40">
+              <path fill="#4D4D4D" d="M356 0H4C1.8 0 0 1.8 0 4v36h360V4c0-2.2-1.8-4-4-4zM22.991 27a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm23.011 0a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm23.011 0a7 7 0 1 1 0-14 7 7 0 0 1 0 14z"/></svg>
               <a href="catalog-item.html">
                 <img src="img/pink.png" width="360" height="576" alt="сайт PINK">
               </a>
@@ -105,7 +113,10 @@
                       <a class="button catalog-list-button" href="#">9 900 РУБ.</a>
                 </div>
           </li>
+
           <li class="catalog-item">
+            <svg class="catalog-item-browser" xmlns="http://www.w3.org/2000/svg" width="360" height="40" viewBox="0 0 360 40">
+              <path fill="#4D4D4D" d="M356 0H4C1.8 0 0 1.8 0 4v36h360V4c0-2.2-1.8-4-4-4zM22.991 27a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm23.011 0a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm23.011 0a7 7 0 1 1 0-14 7 7 0 0 1 0 14z"/></svg>
               <a href="catalog-item.html">
                 <img src="img/borodinski.png" width="360" height="576" alt="сайт BORODINSKI">
               </a>
@@ -115,7 +126,10 @@
                     <a class="button catalog-list-button" href="#">9 900 РУБ.</a>
               </div>
           </li>
+
           <li class="catalog-item">
+            <svg class="catalog-item-browser" xmlns="http://www.w3.org/2000/svg" width="360" height="40" viewBox="0 0 360 40">
+              <path fill="#4D4D4D" d="M356 0H4C1.8 0 0 1.8 0 4v36h360V4c0-2.2-1.8-4-4-4zM22.991 27a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm23.011 0a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm23.011 0a7 7 0 1 1 0-14 7 7 0 0 1 0 14z"/></svg>
               <a href="catalog-item.html">
                 <img src="img/mishka.png" width="360" height="576" alt="сайт MISHKA">
               </a>
@@ -125,7 +139,10 @@
                       <a class="button catalog-list-button" href="#">9 900 РУБ.</a>
                 </div>
           </li>
+
           <li class="catalog-item">
+            <svg class="catalog-item-browser" xmlns="http://www.w3.org/2000/svg" width="360" height="40" viewBox="0 0 360 40">
+              <path fill="#4D4D4D" d="M356 0H4C1.8 0 0 1.8 0 4v36h360V4c0-2.2-1.8-4-4-4zM22.991 27a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm23.011 0a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm23.011 0a7 7 0 1 1 0-14 7 7 0 0 1 0 14z"/></svg>
               <a href="catalog-item.html">
                 <img src="img/aplus.png" width="360" height="576" alt="сайт A+">
               </a>
@@ -135,7 +152,10 @@
                     <a class="button catalog-list-button" href="#">9 900 РУБ.</a>
               </div>
           </li>
+
           <li class="catalog-item">
+            <svg class="catalog-item-browser" xmlns="http://www.w3.org/2000/svg" width="360" height="40" viewBox="0 0 360 40">
+              <path fill="#4D4D4D" d="M356 0H4C1.8 0 0 1.8 0 4v36h360V4c0-2.2-1.8-4-4-4zM22.991 27a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm23.011 0a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm23.011 0a7 7 0 1 1 0-14 7 7 0 0 1 0 14z"/></svg>
               <a href="catalog-item.html">
                 <img src="img/kvast.png" width="360" height="576" alt="сайт КВАСТ">
               </a>
@@ -149,6 +169,7 @@
         </div>
       </div>
       </section>
+
       <section class="contacts">
       <div class="contacts-title">
         <h2>Напишите нам</h2>
@@ -174,6 +195,7 @@
 
       </section>
     </main>
+
     <footer class="main-footer container">
       <ul class="social-list">
         <li><a class="social-button" href="#"><span class="visually-hidden">Студия Нердс во Вконтакте</span>
