--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
             <li><a href="catalog.html">Магазин</a></li>
             <li><a href="contacts.html">Контакты</a></li>
         </ul>
-          <p class="basket">
+          <ul class="basket">
             <a href="#">Корзина</a>
-      </p>
+      </ul>
     </div>
       </nav>
     </div>
@@ -32,7 +32,7 @@
       <h1 class="visually-hidden">Дизайн студия Нёрдс</h1>
 
       <section class="slider">
-      <div class="slider-container">
+      <div class="container">
         <h2 class="visually-hidden">Преимущества</h2>
           <input class="visually-hidden" type="radio" id="product-1" name="toggle" checked>
           <input class="visually-hidden" type="radio" id="product-2" name="toggle">
@@ -66,32 +66,28 @@
         <div class="container">
         <h2 class="visually-hidden">Наши продукты</h2>
         <ul class="features-list">
+
           <li class="features-item">
-            <a class="features-header-logo-site">
               <img src="img/logo-site.png" width="300" height="146" alt="Логотип Сайт">
-            </a>
             <h3>ВЕБ-САЙТЫ</h3>
             <p>Мир никогда не будет прежним после того как увидит наш сайт!</p>
-            <a class="button button-1" href="to order.html">ЗАКАЗАТЬ</a>
+            <a class="button button-1" href="#">ЗАКАЗАТЬ</a>
           </li>
+
           <li class="features-item">
-            <a class="features-header-logo-app">
               <img src="img/logo-app.png" width="300" height="146" alt="Логотип Приложения">
-            </a>
             <h3>ПРИЛОЖЕНИЯ</h3>
             <p>Покорите топ-10 приложений в AppStore и Google Play</p>
-            <a class="button button-2" href="to order.html">ЗАКАЗАТЬ</a>
+            <a class="button button-2" href="#">ЗАКАЗАТЬ</a>
           </li>
+
           <li class="features-item">
-            <a class="features-header-logo-presentation">
               <img src="img/logo-presentation.png" width="300" height="146" alt="Логотип Презентация">
-            </a>
             <h3>ПРЕЗЕНТАЦИИ</h3>
             <p>Вы даже не подозреваете, насколько вы изумительны!</p>
-            <a class="button button-3" href="to order.html">ЗАКАЗАТЬ</a>
+            <a class="button button-3" href="#">ЗАКАЗАТЬ</a>
           </li>
         </ul>
-        <hr align="center" width="1160" size="2" color="#e1e1e1"/>
       </div>
       </section>
 
@@ -107,7 +103,6 @@
               <li>Мобильных приложений для iOS и Android</li>
               <li>Слайдшоу и видео для корпоративных презентаций</li>
             </ul>
-            <hr align="center" width="1160" size="2" color="#e1e1e1"/>
           </div>
 
           <div class="description-logo-table">
@@ -130,14 +125,10 @@
 
         <ul class="clients">
          <li><a href="https://htmlacademy.ru/intensive/htmlcss" aria-label="переход на сайт htmlacademy"><img src="img/htmlacademy-logo.png" alt="логотип сайта htmlacademy" width="199" height="68"></a></li>
-         <li><div class="vertical-line"></div></li>
          <li><a href="#" aria-label="переход на сайт бородински"><img src="img/borodinski-logo.png" alt="логотип сайта бородински" width="209" height="90"></a></li>
-         <li><div class="vertical-line"></div></li>
          <li><a href="#" aria-label="переход на сайт pink"><img src="img/pink-logo.png" alt="логотип сайта pink" width="185" height="52"></a></li>
-         <li><div class="vertical-line"></div></li>
          <li><a href="#" aria-label="переход на сайт mishka"><img src="img/mishka-logo.png" alt="логотип сайта mishka" width="173" height="84"></a></li>
        </ul>
-       <hr align="center" width="1160" size="2" color="#e1e1e1"/>
        </div>
      </section>
 
@@ -145,7 +136,9 @@
       <section class="contacts">
       <div class="contacts-title">
         <h2>Напишите нам</h2>
+        <a title="Закрыть">
         <svg class="modal-cross" xmlns="http://www.w3.org/2000/svg" width="21" height="21" viewBox="0 0 21 21"><path fill="#FB565A" d="M13.328 10.5l7.371-7.371a1.003 1.003 0 0 0 0-1.414L19.285.3a1.003 1.003 0 0 0-1.414 0L10.5 7.672 3.129.301a1.003 1.003 0 0 0-1.414 0L.301 1.715a1.003 1.003 0 0 0 0 1.414L7.672 10.5.301 17.871a1.003 1.003 0 0 0 0 1.414l1.415 1.414a1.003 1.003 0 0 0 1.414 0l7.371-7.371 7.371 7.371a1.003 1.003 0 0 0 1.414 0l1.414-1.414a1.003 1.003 0 0 0 0-1.414L13.328 10.5z"/></svg>
+          </a>
       </div>
         <form class="contacts-form" action="https://echo.htmlacademy.ru" method="post">
         <div class="contacts-user">
@@ -160,31 +153,28 @@
         </div>
           <p class="contacts-item">
             <label for="contacts-textletter">Текст письма:</label>
-            <textarea class="contacts-user-text" id="contacts-textletter" name="textletter" cols="100%" rows="5" placeholder="В свободной форме"></textarea>
+            <textarea class="contacts-user-text" id="contacts-textletter" name="textletter" cols="100" rows="5" placeholder="В свободной форме"></textarea>
           </p>
           <button class="button" type="submit">ОТПРАВИТЬ</button>
         </form>
       </section>
 
       <section class="location">
-        <img src="img/map.jpg" alt="Карта СПб">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037872533207!2d30.320858716285002!3d59.938716481876256!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1550573865197" width="1200" height="416"  style="border:0" allowfullscreen></iframe>
         <div class="address">
           <h3> NЁRDS DESIGN STUDIO</h3>
           <p class="address-info">191186, Санкт-Петербург,<br>ул. Б. Конюшенная, д. 19/8</p>
           <p class="tel"> +7 (812) 275-75-75</p>
           <a class="button" href="#">НАПИШИТЕ НАМ</a>
         </div>
-        <div class="map-marker">
-          <img src="img/map-marker.png" alt="Месторасположение на карте">
-        </div>
       </section>
     </main>
+
     <footer class="main-footer container">
       <ul class="social-list">
         <li><a class="social-button" href="#"><span class="visually-hidden">Студия Нердс во Вконтакте</span>
           <svg xmlns="http://www.w3.org/2000/svg" width="26" height="15" viewBox="0 0 26 15">
             <path fill=#ffffff d="M16.138 11.51c.956-.309 2.18 2.04 3.483 2.939.978.681 1.727.534 1.727.534l3.473-.05s1.815-.112.957-1.554c-.071-.12-.503-1.069-2.585-3.022-2.177-2.043-1.882-1.712.739-5.244 1.597-2.153 2.236-3.468 2.036-4.028-.192-.539-1.365-.399-1.365-.399L20.69.713c-.381.001-.704.119-.851.515-.003.004-.621 1.666-1.445 3.079-1.741 2.989-2.436 3.148-2.724 2.961-.661-.433-.494-1.737-.494-2.664 0-2.897.432-4.105-.846-4.417-.427-.104-.739-.172-1.828-.182-1.392-.021-2.574 0-3.244.329-.445.223-.786.712-.579.74.26.035.843.16 1.155.586.401.552.389 1.789.389 1.789s.229 3.411-.54 3.834c-.528.29-1.25-.302-2.803-3.016-.793-1.388-1.392-2.922-1.392-2.922s-.116-.285-.326-.441c-.25-.185-.6-.244-.6-.244L.848.684S.29.7.085.946c-.182.218-.015.668-.015.668s2.909 6.881 6.203 10.347c3.02 3.182 6.452 2.971 6.452 2.971h1.555s.469-.054.709-.312c.224-.24.214-.691.214-.691s-.031-2.109.935-2.419z"/>
-          </path>
           </svg></a></li>
         <li><a class="social-button" href="#"><span class="visually-hidden">Студия Нердс в Фейсбуке</span><svg xmlns="http://www.w3.org/2000/svg" width="12" height="22" viewBox="0 0 12 22">
     <path fill=#ffffff d="M12 4V0H8a4 4 0 0 0-4 4v4H0v4h4v10h4V12h4V8H8V4h4z"/>
