--- a/catalog.html
+++ b/catalog.html
@@ -21,9 +21,14 @@
           <li><a class="current-page">Магазин</a></li>
           <li><a href="contacts.html">Контакты</a></li>
         </ul>
-        <ul class="basket">
+        <div class="basket">
+          <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" viewBox="0 0 15 15">
+            <circle cx="4.5" cy="13.5" r="1.5" fill="#a6a6a6"/>
+            <circle cx="12.5" cy="13.5" r="1.5" fill="#a6a6a6"/>
+            <path fill="#a6a6a6" d="M15 2H4.07l-.422-2H0v2h2.031l1.985 9H15V9H9.441L15 6.951z"/>
+          </svg>
         <a href="#">Корзина</a>
-      </ul>
+      </div>
       </div>
       </nav>
       </div>
@@ -132,10 +137,10 @@
           <li class="catalog-item">
             <svg class="catalog-item-browser" xmlns="http://www.w3.org/2000/svg" width="360" height="40" viewBox="0 0 360 40">
               <path fill="#4D4D4D" d="M356 0H4C1.8 0 0 1.8 0 4v36h360V4c0-2.2-1.8-4-4-4zM22.991 27a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm23.011 0a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm23.011 0a7 7 0 1 1 0-14 7 7 0 0 1 0 14z"/></svg>
-                <img src="img/sedona.png" width="360" height="576" alt="сайт SENODA">
+                <img src="img/sedona.jpg" width="360" height="576" alt="сайт SENODA">
               <div class="add-info">
                   <h4><a class="catalog-title" href="#">SEDONA</a></h4>
-                    <p>Информационный сайт <br>для туристов</p>
+                    <p>Информационный сайт для туристов</p>
                       <a class="button catalog-list-button" href="#">9 900 РУБ.</a>
               </div>
           </li>
@@ -143,10 +148,10 @@
           <li class="catalog-item">
             <svg class="catalog-item-browser" xmlns="http://www.w3.org/2000/svg" width="360" height="40" viewBox="0 0 360 40">
               <path fill="#4D4D4D" d="M356 0H4C1.8 0 0 1.8 0 4v36h360V4c0-2.2-1.8-4-4-4zM22.991 27a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm23.011 0a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm23.011 0a7 7 0 1 1 0-14 7 7 0 0 1 0 14z"/></svg>
-                <img src="img/pink.png" width="360" height="576" alt="сайт PINK">
+                <img src="img/pink.jpg" width="360" height="576" alt="сайт PINK">
                 <div class="add-info">
                   <h4><a class="catalog-title" href="#">PINK APP</a></h4>
-                    <p>Продуктовый лендинг<br> приложения для iOS и Android</p>
+                    <p>Продуктовый лендинг приложения для iOS и Android</p>
                       <a class="button catalog-list-button" href="#">9 900 РУБ.</a>
                 </div>
           </li>
@@ -154,10 +159,10 @@
           <li class="catalog-item">
             <svg class="catalog-item-browser" xmlns="http://www.w3.org/2000/svg" width="360" height="40" viewBox="0 0 360 40">
               <path fill="#4D4D4D" d="M356 0H4C1.8 0 0 1.8 0 4v36h360V4c0-2.2-1.8-4-4-4zM22.991 27a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm23.011 0a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm23.011 0a7 7 0 1 1 0-14 7 7 0 0 1 0 14z"/></svg>
-                <img src="img/borodinski.png" width="360" height="576" alt="сайт BORODINSKI">
+                <img src="img/borodinski.jpg" width="360" height="576" alt="сайт BORODINSKI">
               <div class="add-info">
                 <h4><a class="catalog-title" href="#">BARBERSHOP</a></h4>
-                  <p>Сайт салона красоты.<br> Для мужчин, да.</p>
+                  <p>Сайт салона красоты. Для мужчин, да.</p>
                     <a class="button catalog-list-button" href="#">9 900 РУБ.</a>
               </div>
           </li>
@@ -165,10 +170,10 @@
           <li class="catalog-item">
             <svg class="catalog-item-browser" xmlns="http://www.w3.org/2000/svg" width="360" height="40" viewBox="0 0 360 40">
               <path fill="#4D4D4D" d="M356 0H4C1.8 0 0 1.8 0 4v36h360V4c0-2.2-1.8-4-4-4zM22.991 27a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm23.011 0a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm23.011 0a7 7 0 1 1 0-14 7 7 0 0 1 0 14z"/></svg>
-                <img src="img/mishka.png" width="360" height="576" alt="сайт MISHKA">
+                <img src="img/mishka.jpg" width="360" height="576" alt="сайт MISHKA">
                 <div class="add-info">
                   <h4><a class="catalog-title" href="#">MISHKA</a></h4>
-                    <p>Интернет-магазин<br> вязаных игрушек</p>
+                    <p>Интернет-магазин вязаных игрушек</p>
                       <a class="button catalog-list-button" href="#">9 900 РУБ.</a>
                 </div>
           </li>
@@ -176,10 +181,10 @@
           <li class="catalog-item">
             <svg class="catalog-item-browser" xmlns="http://www.w3.org/2000/svg" width="360" height="40" viewBox="0 0 360 40">
               <path fill="#4D4D4D" d="M356 0H4C1.8 0 0 1.8 0 4v36h360V4c0-2.2-1.8-4-4-4zM22.991 27a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm23.011 0a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm23.011 0a7 7 0 1 1 0-14 7 7 0 0 1 0 14z"/></svg>
-                <img src="img/aplus.png" width="360" height="576" alt="сайт A+">
+                <img src="img/aplus.jpg" width="360" height="576" alt="сайт A+">
               <div class="add-info">
                 <h4><a class="catalog-title" href="#">A PLUS</a></h4>
-                  <p>Лендинг курсов повышения<br> квалификации</p>
+                  <p>Лендинг курсов повышения квалификации</p>
                     <a class="button catalog-list-button" href="#">9 900 РУБ.</a>
               </div>
           </li>
@@ -187,18 +192,19 @@
           <li class="catalog-item">
             <svg class="catalog-item-browser" xmlns="http://www.w3.org/2000/svg" width="360" height="40" viewBox="0 0 360 40">
               <path fill="#4D4D4D" d="M356 0H4C1.8 0 0 1.8 0 4v36h360V4c0-2.2-1.8-4-4-4zM22.991 27a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm23.011 0a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm23.011 0a7 7 0 1 1 0-14 7 7 0 0 1 0 14z"/></svg>
-                <img src="img/kvast.png" width="360" height="576" alt="сайт КВАСТ">
+                <img src="img/kvast.jpg" width="360" height="576" alt="сайт КВАСТ">
                 <div class="add-info">
                   <h4><a class="catalog-title" href="#">КВАСТ</a></h4>
-                    <p>Промо-сайт производителя<br> крафтового кваса</p>
+                    <p>Промо-сайт производителя крафтового кваса</p>
                       <a class="button catalog-list-button" href="#">9 900 РУБ.</a>
                 </div>
             </li>
-          </ul>
+           </ul>
+          </section>
+         </div>
         </div>
+
       </div>
-    </section>
-  </div>
         <div class="pagination container">
             <ul class="pagination-list">
               <li><a class="open-pagination" aria-label="открыта страница">1</a></li>
@@ -238,7 +244,7 @@
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037872533207!2d30.320858716285002!3d59.938716481876256!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1550573865197" width="1200" height="416"  style="border:0" allowfullscreen></iframe>
         <div class="address">
           <h3> NЁRDS DESIGN STUDIO</h3>
-          <p class="address-info">191186, Санкт-Петербург,<br>ул. Б. Конюшенная, д. 19/8</p>
+          <p class="address-info">191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
           <p class="tel"> +7 (812) 275-75-75</p>
           <a class="button" href="#">НАПИШИТЕ НАМ</a>
         </div>
