--- a/index.html
+++ b/index.html
@@ -21,9 +21,14 @@
             <li><a href="catalog.html">Магазин</a></li>
             <li><a href="contacts.html">Контакты</a></li>
         </ul>
-          <ul class="basket">
+          <div class="basket">
+            <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" viewBox="0 0 15 15">
+              <circle cx="4.5" cy="13.5" r="1.5" fill="#a6a6a6"/>
+              <circle cx="12.5" cy="13.5" r="1.5" fill="#a6a6a6"/>
+              <path fill="#a6a6a6" d="M15 2H4.07l-.422-2H0v2h2.031l1.985 9H15V9H9.441L15 6.951z"/>
+            </svg>
             <a href="#">Корзина</a>
-      </ul>
+          </div>
     </div>
       </nav>
     </div>
@@ -163,7 +168,7 @@
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037872533207!2d30.320858716285002!3d59.938716481876256!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1550573865197" width="1200" height="416"  style="border:0" allowfullscreen></iframe>
         <div class="address">
           <h3> NЁRDS DESIGN STUDIO</h3>
-          <p class="address-info">191186, Санкт-Петербург,<br>ул. Б. Конюшенная, д. 19/8</p>
+          <p class="address-info">191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
           <p class="tel"> +7 (812) 275-75-75</p>
           <a class="button" href="#">НАПИШИТЕ НАМ</a>
         </div>
