--- a/catalog.html
+++ b/catalog.html
@@ -242,11 +242,13 @@
 
       <section class="location">
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037872533207!2d30.320858716285002!3d59.938716481876256!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1550573865197" width="1200" height="416"  style="border:0" allowfullscreen></iframe>
-        <div class="address">
-          <h3> NЁRDS DESIGN STUDIO</h3>
-          <p class="address-info">191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
-          <p class="tel"> +7 (812) 275-75-75</p>
-          <a class="button" href="#">НАПИШИТЕ НАМ</a>
+        <div class="container">
+          <div class="address">
+            <h3> NЁRDS DESIGN STUDIO</h3>
+            <p class="address-info">191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+            <p class="tel"> +7 (812) 275-75-75</p>
+            <a class="button" href="#">НАПИШИТЕ НАМ</a>
+          </div>
         </div>
       </section>
     </main>
