--- a/catalog.html
+++ b/catalog.html
@@ -214,32 +214,6 @@
             </ul>
         </div>
 
-      <section class="contacts">
-      <div class="contacts-title">
-        <h2>Напишите нам</h2>
-        <a title="Закрыть">
-        <svg class="modal-cross" xmlns="http://www.w3.org/2000/svg" width="21" height="21" viewBox="0 0 21 21"><path fill="#FB565A" d="M13.328 10.5l7.371-7.371a1.003 1.003 0 0 0 0-1.414L19.285.3a1.003 1.003 0 0 0-1.414 0L10.5 7.672 3.129.301a1.003 1.003 0 0 0-1.414 0L.301 1.715a1.003 1.003 0 0 0 0 1.414L7.672 10.5.301 17.871a1.003 1.003 0 0 0 0 1.414l1.415 1.414a1.003 1.003 0 0 0 1.414 0l7.371-7.371 7.371 7.371a1.003 1.003 0 0 0 1.414 0l1.414-1.414a1.003 1.003 0 0 0 0-1.414L13.328 10.5z"/></svg>
-          </a>
-      </div>
-        <form class="contacts-form" action="https://echo.htmlacademy.ru" method="post">
-        <div class="contacts-user">
-          <p class="contacts-item">
-            <label for="contacts-name">Ваше Имя:</label>
-            <input id="contacts-name" type="text" name="name" placeholder="Имя Фамилия">
-          </p>
-          <p class="contacts-item">
-            <label for="contacts-email">Ваш e-mail:</label>
-            <input id="contacts-email" type="text" name="email" placeholder="email@example.com">
-          </p>
-        </div>
-          <p class="contacts-item">
-            <label for="contacts-textletter">Текст письма:</label>
-            <textarea class="contacts-user-text" id="contacts-textletter" name="textletter" cols="100" rows="5" placeholder="В свободной форме"></textarea>
-          </p>
-          <button class="button" type="submit">ОТПРАВИТЬ</button>
-        </form>
-      </section>
-
       <section class="location">
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037872533207!2d30.320858716285002!3d59.938716481876256!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1550573865197" width="1200" height="416"  style="border:0" allowfullscreen></iframe>
         <div class="container">
@@ -247,7 +221,7 @@
             <h3> NЁRDS DESIGN STUDIO</h3>
             <p class="address-info">191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
             <p class="tel"> +7 (812) 275-75-75</p>
-            <a class="button" href="#">НАПИШИТЕ НАМ</a>
+            <a class="contacts-us button" href="#">НАПИШИТЕ НАМ</a>
           </div>
         </div>
       </section>
@@ -272,5 +246,32 @@
       </div>
     </footer>
 
+    <section class="contacts">
+    <div class="contacts-title">
+      <h2>Напишите нам</h2>
+      <a title="Закрыть">
+      <svg class="modal-cross" xmlns="http://www.w3.org/2000/svg" width="21" height="21" viewBox="0 0 21 21"><path fill="#FB565A" d="M13.328 10.5l7.371-7.371a1.003 1.003 0 0 0 0-1.414L19.285.3a1.003 1.003 0 0 0-1.414 0L10.5 7.672 3.129.301a1.003 1.003 0 0 0-1.414 0L.301 1.715a1.003 1.003 0 0 0 0 1.414L7.672 10.5.301 17.871a1.003 1.003 0 0 0 0 1.414l1.415 1.414a1.003 1.003 0 0 0 1.414 0l7.371-7.371 7.371 7.371a1.003 1.003 0 0 0 1.414 0l1.414-1.414a1.003 1.003 0 0 0 0-1.414L13.328 10.5z"/></svg>
+        </a>
+    </div>
+      <form class="contacts-form" action="https://echo.htmlacademy.ru" method="post">
+      <div class="contacts-user">
+        <p class="contacts-item">
+          <label for="contacts-name">Ваше Имя:</label>
+          <input id="contacts-name" type="text" name="name" placeholder="Имя Фамилия">
+        </p>
+        <p class="contacts-item">
+          <label for="contacts-email">Ваш e-mail:</label>
+          <input id="contacts-email" type="text" name="email" placeholder="email@example.com">
+        </p>
+      </div>
+        <p class="contacts-item">
+          <label for="contacts-textletter">Текст письма:</label>
+          <textarea class="contacts-user-text" id="contacts-textletter" name="textletter" cols="100" rows="5" placeholder="В свободной форме"></textarea>
+        </p>
+        <button class="button" type="submit">ОТПРАВИТЬ</button>
+      </form>
+    </section>
+
+    <script src="js/script.js" type="text/javascript"></script>
   </body>
 </html>
